tests/neg-custom-args/captures/indirect-avoid.check
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/indirect-avoid.scala:16:4 --------------------------------
16 |    nll // error
   |    ^^^
   |    Found:    Test.LL^{nll}
   |    Required: Test.LL^{ll}
   |
   |    Note that capability nll is not included in capture set {ll}.
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/indirect-avoid.scala:26:14 -------------------------------
26 |  val _: LL = x1 // error
   |              ^^
   |Found:    (Test.x1 : Test.LL^{cap.rd})
   |Required: Test.LL
   |
   |Note that capability cap.rd is not included in capture set {}.
   |
   |where:    cap is a fresh root capability created in value x1 when instantiating method filterImpl1's type (ll: Test.LL^): Test.LL^{cap².rd, ll}
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/indirect-avoid.scala:32:4 --------------------------------
32 |    nll // error
   |    ^^^
   |    Found:    Test.LL^{nll}
   |    Required: Test.LL^{ll}
   |
   |    Note that capability nll is not included in capture set {ll}.
   |
   | longer explanation available when compiling with `-explain`
